refactor: change interface name, add service with sort method, change variable name, clear code

--- a/src/app/sorting-table/header-row/header-row.component.html
+++ b/src/app/sorting-table/header-row/header-row.component.html
@@ -1,5 +1,5 @@
 <div class="table-header-cell">
-  <p (click)="toggleOrder()">{{title}}
+  <p class="title" (click)="toggleOrder()">{{title}}
     <span class="arrow" [ngSwitch]="order">
       <span class="arrow-up" *ngSwitchCase="'Asc'"></span>
       <span class="arrow-down" *ngSwitchCase="'Desc'"></span>
