refactor: change variable name, remove unnecessary interfaces, refactor code in sort service

--- a/src/app/sorting-table/sorting-table.component.html
+++ b/src/app/sorting-table/sorting-table.component.html
@@ -7,7 +7,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let data of person">
+  <tr *ngFor="let data of tableData">
     <th>{{data.id}}</th>
     <th>{{data.name}}</th>
     <th>{{data.username}}</th>
