refactor: add service to keep and get data from it, change some logic

--- a/src/app/sorting-table/sorting-table.component.html
+++ b/src/app/sorting-table/sorting-table.component.html
@@ -17,8 +17,8 @@
         </tbody>
       </table>
 
-      <select class="count-select" [formControl]="albumCountControl" (change)="changeTableSize(albumCountControl.value)">
-        <option *ngFor="let album of albumCount">{{album.count}}</option>
+      <select class="count-select" [formControl]="albumCountControl">
+        <option [value]="album.count" *ngFor="let album of albumCount">{{album.count}}</option>
       </select>
     </div>
 
